syntax="proto3";
package com.game.message.proto;

import "Const.proto";

message OPErrorCodeInfo {
    optional int64 playerId = 1;
    required int32 opCode = 2;
    required int32 errCode = 3;
}